# RibnXtr2026

./: .cursorignore  .gitignore  CMakeLists.txt  CMakePresets.json  PROJECT_CONTEXT.md  PROJECT_NOTES.md  TODO.md  readme.md
cmake/Modules/: FindKinectSDK2.cmake
notes/: 2026-03-04-sesja.md  2026-03-05-sesja.md  2026-03-06-sesja.md  Kinect_3D_next_steps.md
project_files/RibnXtr2022-project_files/ribnxtr2_Files/python/JadraKostnienia/: readme.txt  requirements.txt
project_files/RibnXtr2022-project_files/ribnxtr2_Files/python/JadraKostnienia/configs/: base.yaml
project_files/RibnXtr2022-project_files/ribnxtr2_Files/python/JadraKostnienia/src/: checkpoint.py  run_jadra_pipeline.py  segmentation.py  segmentation_dataset.py  test.py  train.py  train_backup.py  use.py  use_old.py
project_files/RibnXtr2022-project_files/ribnxtr2_Files/run_files/: .RibonXDefaultDir  .code  config.ini  config.ini.bYTZJE  config.machine1.ini  config.machine2.ini  config.sample.ini  geom_config.ini  hounsfield.ini
project_files/RibnXtr2022-project_files/ribnxtr2_Files/run_files/filter_compositions/: !Morphology-test.layers  !zdjecia-thickness.layers  .fastfilters  1.JadraGlobal.layers  1.ghost i final c0.layers  1.ghost i final c01.layers  2.JadraProb.layers  2019grow2d-median.layers  2019grow2d.layers  2019grow3d nofront.layers  2019grow3d nofront2-dlamr.layers  2019grow3d nofront2.layers  2022- islands.layers  2022- thickness test.layers  2022-explode 2d test.layers  2022-zalewanie pod zatoki.layers  2d convolution.layers  2d rot fancy.layers  Artery-253-2021.06.17.layers  Artery-253.layers  Artery-CT-test1.layers  Artery-CT-test2- DO PRACY.layers  Artery-Resample.layers  Artery-Zdjecia-naczynia1-prob2.layers  Artery-doppler test1.layers  Artery-doppler test2.layers  Artery-forSinuses.layers  Artery-gaussian.layers  Artery-intensity.layers  Artery-intensityFunction.layers  Artery-median.layers  Artery-probability.layers  Artery-probability2.layers  Artery-test 17.06.2021.layers  Artery-test1.layers  Artery-threshold-global-2.layers  Artery-threshold-global-E.layers  Artery-threshold-global-czerwony.layers  Artery-threshold-global-tmp-E.layers  Artery-threshold-global-tmp.layers  (+106 more)
project_files/RibnXtr2022-project_files/ribnxtr2_Files/run_files/images/: MaskButtons.psd  camerabuttons.psd  paletteDefs
project_files/RibnXtr2022-project_files/ribnxtr2_Files/run_files/material/: Phong.xml  ProceduralTexture2.xml  Shader_Anisotropic.xml  Shader_BlackMetal_Isophote.xml  Shader_BumpMappingWithoutTexture.xml  Shader_Isophote.xml  Shader_IsophoteByGlLight.xml  Shader_IsophoteByGlLightCorrected.xml  Shader_IsophoteByGlLightSpaceCame.xml  Shader_IsophoteGlColor.xml  Shader_IsophoteGlColor2.xml  Shader_IsophoteTexture.xml  Shader_OrangeBookLibrary_WardBRD.xml  Shader_OrangeMetal_Isophote.xml  Shader_PhongGreyMetalPlasticIsophote.xml  Shader_PhongMetal.xml  Shader_PhongRedPlasticIsophote.xml  Shader_ProceduralTexture.xml  Shader_ProceduralTexture2.xml  Shader_metalShader.xml  Shader_numShader.xml  Shader_phongsShader.xml  Shader_rubber.xml  Shader_rubber2.xml  Shader_skeletonVTKShader.xml  Shader_testAddparam.xml  Shader_toon.xml  SmoothPlastic.xml  src_axlGui_shader_BlackMetal_Isophote.xml  src_axlGui_shader_GreyMetal_04_Isophote.xml  src_axlGui_shader_OrangeMetal_Isophote.xml  src_axlGui_shader_PhongRedPlasticIsophote.xml  src_axlGui_shader_glossy.xml  src_axlGui_shader_normalColor.xml  test.xml
project_files/RibnXtr2022-project_files/ribnxtr2_Files/run_files/prop/: default.prop  default_1.prop  gold.prop  paletteDefs  red shiny.prop  silver.prop  table2.act  wet blue.prop  white non spec.prop
project_files/RibnXtr2022-project_files/ribnxtr2_Files/run_files/volopacity/: NIFTI-mip.func  NIFTI-mip2.func  NIFTI-zarys.func  artery-0szczepan.func  default.func  dla seg nacyzn 3d.func  moja funcja.func  mri- test nifii.func  naczynia doppler 4.func  naczynia doppler 5.func  naczynia doppler.func  naczynia doppler2.func  naczynia doppler3.func  naczynia mri test.func  tescCT-bones-gold-final.func  tescCT-bones-gradient.func  tescCT-bones-gradient2.func  tescCT-bones-gradient2x.func  tescCT-muliti-mip.func  testCT-bones.func  testCT-nointerpolation.func  testCT.func  tubetk.func  zatoki1.func
project_files/RibnXtr2022-project_files/ribnxtr2_Files/src/include/: AbstractFunctionClasses.h  Animations.h  AnisotropicDiffusion.h  ArteryData.h  ByteMaskCollection.h  ClosingMeshHoles.h  CylinderBoxActor.h  DataSet.h  DicomDataSet.h  DicomDir.h  DicomInfo.h  DicomObject.h  DicomTypeDef.h  DistanceMap.h  EdgesExtraction3D.h  ExplodeSegmentation.h  FFMPEGTools.h  FeaturePointRegistration.h  FilterDefs.h  Filters3D.h  GUIPanelWidget.h  Geometry.h  GraftVoxelize.h  Grid3D.h  HeartSimulator.h  HistWidget.h  HybridMedianFilter.h  ImageSetElasticRegistration.h  ImageSetRegistration.h  ImageShapes.h  ImageWidget.h  Interpolation.h  LayerFilters.h  LayerGenericFilter.h  LayerMaskFilters.h  LinkedList.h  MainWindow.h  MyDockWidget.h  MyQtObjects.h  OptimizationDFPowell.h  (+37 more)
project_files/RibnXtr2022-project_files/ribnxtr2_Files/src/source/: Animations.cpp  AnisotropicDiffusion.cpp  ArteryData.cpp  ByteMaskCollection.cpp  ClosingMeshHoles.cpp  CylinderBoxActor.cpp  DataSet.cpp  DicomDataSet.cpp  DicomDir.cpp  DicomInfo.cpp  DicomObject.cpp  DistanceMap.cpp  EdgesExtraction3D.cpp  ExplodeSegmentation.cpp  FFMPEGTools.cpp  FeaturePointRegistration.cpp  FilterDefs.cpp  Filters3D.cpp  GUIPanelWidget.cpp  Geometry.cpp  GraftVoxelize.cpp  Grid3D.cpp  HeartSimulator.cpp  HistWidget.cpp  HybridMedianFilter.cpp  ImageSetElasticRegistration.cpp  ImageSetRegistration.cpp  ImageShapes.cpp  ImageWidget.cpp  Interpolation.cpp  LayerFilters.cpp  LayerGenericFilter.cpp  LayerMaskFilters.cpp  MainWindow.cpp  MyDockWidget.cpp  MyQtObjects.cpp  OptimizationDFPowell.cpp  OptimizationMarquardt.cpp  OptimizationPowell.cpp  OtherCommonFunctions.cpp  (+32 more)
tools/: build-vs2019-debug.ps1  build-vs2019-release.ps1  build-vs2022-debug.ps1  build-vs2022-release.ps1  configure-vs2019.ps1  configure-vs2022.ps1
(+222 files in other folders)
